# templatedemo-sharedfolder

./: .gitignore  README.md  pyproject.toml
one/: apps.py  views.py
static_dev/: main.css
template_test/: asgi.py  settings.py  urls.py  wsgi.py
templates/: shared_base.html
templates/one/: index.html
templates/three/: index.html
templates/two/: index.html
three/: views.py
two/: views.py
